--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
      <!-- Admin -->
  <h3 class="text-center mt-3">Admin</h3>
  <section class="container my-5">
-     <form id="message-form" action="admin/login.php" method="post">
+     <form id="message-form" action="login.php" method="post">
        <div class="mb-3">
          <label for="name" class="form-label">Username</label>
          <input type="text" class="form-control grey-input" id="username" name="username" required>
